# gstreamer1.0-hivosink

./: README  README.md  autogen.sh  configure.ac
src/: Makefile.am  config.h  gst_hisi_vo_context.c  gst_hisi_vo_context.h  gstvideosink.c  gstvideosink.h
